# 74000M

./: .gitignore  74000pros.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  GitHub address.txt  Makefile  README.md  design_frontend.md  project.pros  robot.cmd
.agents/skills/74000pros/: SKILL.md
.agents/skills/74000pros/agents/: openai.yaml
.agents/skills/understand-74000m/: SKILL.md
.agents/skills/understand-74000m/agents/: openai.yaml
.github/workflows/: pc-tests.yml
config/: hardware_profile.yaml
config/robots/: 492X.yaml  492Z.yaml
docs/: 1690X_FIRST_DRIVE.md  AUTONOMY_SAFETY_OFFLINE.md  CALIBRATION_DATA_AND_SYSID.md  CHASSIS_VELOCITY_OFFLINE.md  CONTROL_FOUNDATIONS_OFFLINE.md  DUAL_ROBOT_FIRST_DRIVE.md  HARDWARE_COMMISSIONING.md  HMI_OFFLINE_VALIDATION.md  MOTION_PRIMITIVES_OFFLINE.md  OFFLINE_FREEZE_GATE.md  OFFLINE_RELEASE_EVIDENCE.json  OFFLINE_RELEASE_VALIDATION.md  ROBOT_PROFILES.md  ROUTE_ORCHESTRATION_OFFLINE.md  SYSTEM_CONTRACT.md  TRAJECTORY_GENERATION_OFFLINE.md  TRAJECTORY_TRACKING_OFFLINE.md
include/robot/: robot.hpp
include/robot/autonomy/: motion_commands.hpp  route_registry.hpp  safety_supervisor.hpp  trajectory.hpp  trajectory_tracker.hpp
include/robot/calibration/: calibration_tools.hpp  characterization_runner.hpp
include/robot/commands/: command_groups.hpp  drive_request_arbiter.hpp  mechanism_commands.hpp  request_sink.hpp  scheduler.hpp
include/robot/config/: robot_config.hpp  robot_identity.hpp  robot_profiles.hpp
include/robot/control/: chassis_velocity_controller.hpp  engineering_pid.hpp  feedforward.hpp  motion_profile.hpp  termination.hpp
include/robot/core/: build_info.hpp  fault.hpp  frame.hpp  quality.hpp  snapshot_box.hpp  units.hpp
include/robot/drive/: actuator_frame.hpp  drive_request.hpp  kinematics.hpp  output_service.hpp  output_slew.hpp  safety_gate.hpp  voltage_allocation.hpp
include/robot/health/: fault_manager.hpp  motor_protection.hpp
include/robot/hmi/: edit_lease.hpp  event_queue.hpp  parameter_transaction.hpp  permissions.hpp  persistence.hpp  registry.hpp  render_models.hpp  selection_manager.hpp  types.hpp
include/robot/lift/: lift_control.hpp
include/robot/manual/: commissioning_arcade.hpp  commissioning_curvature.hpp  heading_assist.hpp  input_shaping.hpp  manual_drive.hpp
include/robot/odometry/: odometry.hpp
include/robot/platform/: fake_io.hpp  hardware_self_test.hpp  io.hpp  pros_adapters.hpp  pros_recording_sink.hpp
include/robot/runtime/: control_loop.hpp  global_control_event.hpp  mailbox.hpp  mode.hpp  mode_manager.hpp  output_status.hpp  output_task.hpp  timing_monitor.hpp
include/robot/sensors/: filters.hpp  sensor_validator.hpp  validated_inputs.hpp
include/robot/state/: controller_snapshot.hpp  pose2d.hpp  raw_inputs.hpp  robot_state.hpp
include/robot/telemetry/: flight_recorder.hpp  integrity.hpp  log_frame.hpp  recording.hpp  recording_codec.hpp  recording_file.hpp  replay.hpp  spsc_ring.hpp  telemetry_task.hpp
include/robot/ui/: registry_ids.hpp
src/: main.cpp  robot.cpp
src/platform/: pros_adapters.cpp  pros_recording_sink.cpp
statusmonitor/documents/: VEX_V5_PC状态监控与调参系统完整策划案_GPT5.6.md  VEX_V5_飞行记录与自动诊断系统终极策划案_GPT5.6.md  telemetry-status-monitor-plan.md
statusmonitor/pc/: ACCEPTANCE.md  README.md  USER_GUIDE.md  build_macos_app.command  build_windows.ps1  packaging_entry.py  pyproject.toml  run_statusmonitor.ps1  run_statusmonitor_macos.command  setup.ps1
statusmonitor/pc/scripts/: capture_ui.py
statusmonitor/pc/src/statusmonitor/: __init__.py  app.py  cli.py  models.py  replay.py  repository.py  segmentation.py  settings.py  ui_style.py  version.py
statusmonitor/pc/src/statusmonitor/analysis/: compare.py  pipeline.py  signals.py  sysid.py
statusmonitor/pc/src/statusmonitor/plotting/: __init__.py  static.py
statusmonitor/pc/src/statusmonitor/protocol/: __init__.py  schema31.py  v5l.py
statusmonitor/pc/src/statusmonitor/reports/: __init__.py  llm.py
statusmonitor/pc/src/statusmonitor/storage/: __init__.py  archive.py
statusmonitor/pc/tests/: conftest.py  test_end_to_end.py  test_gui_smoke.py  test_macos_launchers.py  test_protocol.py  test_repository.py  test_signals.py  test_stress.py  v5l_builder.py
statusmonitor/protocol/: README.md  log_file_schema.yaml
tests/: expect_v5l_reject.cmake  test_autonomy_safety.cpp  test_build_info.cpp  test_calibration.cpp  test_chassis_velocity_controller.cpp  test_command_groups_routes.cpp  test_commissioning_arcade.cpp  test_commissioning_curvature.cpp  test_config.cpp  test_contracts.cpp  test_control_foundations.cpp  test_drive_math.cpp  test_framework.hpp  test_freeze_gate.cpp  test_hal_contract.cpp  test_health.cpp  test_hmi.cpp  test_lift.cpp  test_main.cpp  test_manual_drive.cpp  test_motion_commands.cpp  test_odometry.cpp  test_offline_closed_loop.cpp  test_pose2d.cpp  test_runtime.cpp  test_scheduler.cpp  test_sensors.cpp  test_telemetry.cpp  test_trajectory.cpp  test_trajectory_tracker.cpp  test_units.cpp  v5l_fixture.cpp
tools/: audit_offline_freeze.ps1  robot.ps1  v5l_inspect.cpp  validate_offline_release.ps1
