[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vex-statusmonitor"
version = "0.1.0"
description = "VEX V5 flight-log importer, analyzer, desktop GUI, and LLM evidence pack generator."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI GPT-5.6 (Codex)"}]
dependencies = [
  "Jinja2>=3.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "polars>=1.0",
  "pyarrow>=16",
  "pydantic>=2.7",
  "pyqtgraph>=0.13.7",
  "PySide6>=6.7",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.5",
]
build = ["pyinstaller>=6.8"]

[project.scripts]
statusmonitor = "statusmonitor.cli:main"
statusmonitor-gui = "statusmonitor.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/statusmonitor"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "stress: large-file tests excluded from the normal fast suite",
]

[tool.ruff]
line-length = 100
target-version = "py311"
